--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.1",
 		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.12",
@@ -23,11 +25,13 @@
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.536.0",
 		"motion": "^12.23.12",
 		"next": "15.4.5",
 		"next-themes": "^0.4.6",
 		"react": "19.1.0",
+		"react-day-picker": "^9.8.1",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.62.0",
 		"sonner": "^2.0.7",
@@ -39,6 +43,7 @@
 		"@biomejs/biome": "2.1.3",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tanstack/eslint-plugin-query": "^5.83.1",
+		"@types/date-fns": "^2.6.3",
 		"@types/node": "^20.19.9",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
