--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
@@ -36,6 +37,7 @@
 		"react-day-picker": "^9.8.1",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.62.0",
+		"react-window": "^1.8.11",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.0.0",
