--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.0.0",
-		"zod": "^4.0.14"
+		"zod": "^4.0.14",
+		"zustand": "^5.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
