--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-collapsible": "^1.1.11",
+		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-progress": "^1.1.7",
+		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
@@ -25,7 +27,6 @@
 		"@tanstack/react-query": "^5.84.1",
 		"@tanstack/react-query-devtools": "^5.84.1",
 		"@types/three": "^0.178.1",
-		"autoprefixer": "^10.4.21",
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -41,7 +42,7 @@
 		"react-window": "^1.8.11",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
-		"tailwindcss": "^4.0.0",
+		"vaul": "^1.1.2",
 		"zod": "^4.0.14",
 		"zustand": "^5.0.7"
 	},
@@ -53,8 +54,11 @@
 		"@types/node": "^20.19.9",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9",
 		"eslint-config-next": "15.4.5",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5"
 	},
